--- a/client/lab_4/style.css
+++ b/client/lab_4/style.css
@@ -30,7 +30,7 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’, ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  background-color: rgb(239, 239, 239);
+  background-color: rgb(170,167,204, .6);
 }
 
 
@@ -39,10 +39,20 @@ a {
   text-decoration: none;
 }
 
-h2 {
+h2, h3 {
   margin:0;
   padding:0;
   padding-bottom:1.5rem;
+}
+
+h3{
+  display:block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 form {
@@ -56,6 +66,10 @@ form {
   - note that the period vanishes there!
 */
 
+div{
+  border: 2px dashed rgba(0, 0, 0, 0.8);
+}
+
 
 .wrapper {
   min-height: 100vh;
@@ -63,6 +77,7 @@ form {
   flex-direction: column;
   margin: 0;
   flex: 1;
+  border : 0px
 }
 
 .container {
@@ -71,13 +86,11 @@ form {
   justify-content: space-evenly;
   align-items: start;
   flex:1;
+  border : 0px
 }
 
 .header {
-  padding-top: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: 1.5rem;
+  
 }
 
 
@@ -92,8 +105,8 @@ form {
   /* this will push other blocks out of the way */
 
   /* colors */
-  background-color: #ffe08a;
-  color: #4a4a4a;
+  background-color: rgba(27, 11, 212, 0.9);
+  color: rgba(181, 28, 155, 0.9);
 
   /* shapes */
   border-radius: 6px;
@@ -104,6 +117,7 @@ form {
 
   /* box-shadows are fancy */
   box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  border: 2px dashed rgba(0, 0, 0, 0.8);
 }
 
 
@@ -120,7 +134,6 @@ form {
   background-color: rgba(239, 239, 239, 0.40);
   border: 2px dashed;
   border-radius: 4px;
-
   width: fit-content;
   height:fit-content;
   padding: 1.5rem;
@@ -128,18 +141,22 @@ form {
 }
 
 .left_section {
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: rgba(20, 153, 193, 0.8);
   flex: 0 1 auto;
   margin: 1rem;
   padding: 1.5rem;
+  color: rgba(181, 28, 155, 0.9);
 }
 
 .right_section {
-  background-color: rgba(255, 224, 138, 0.7);
+  background-color: rgba(20, 153, 193, 0.8);
   flex: 1 2 auto;
   margin: 1rem;
   align-items: center;
-  max-width: 450px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  color: rgba(181, 28, 155, 0.9);
 }
 
 /*
@@ -151,13 +168,15 @@ form {
 .footer {
   flex-shrink: 0;
   padding: 1rem;
-  background-color: rgba(0, 139, 139, 0.8);
+  background-color: rgba(27, 11, 212, 0.9);
   font-size: 1.2rem;
   font-weight: 600;
+  border: 2px dashed rgba(0, 0, 0, 0.8);
+  color: rgba(181, 28, 155, 0.9);
 }
 
 .footer a {
-  color: rgba(255, 224, 138, 1);
+  color: rgb(72, 212, 12);
   text-decoration: underline;
 }
 
@@ -170,7 +189,7 @@ form {
   /* Hue, saturation, luminosity, alpha */
   background-color: hsla(0, 0%, 90%, 0.15);
   /* red, green, blue, alpha */
-  color: rgb(246, 169, 93);
+  color: rgb(200, 27, 36);
   text-decoration: none;
 }
 
@@ -301,5 +320,19 @@ form input {
     /* check it out by using your developer tools to shrink your screen-size */
     .container {
       background-color: rgba(204, 8, 162, 0.65);
+      flex-direction: column;
+    }
+
+    .right_section {
+      flex: 1 1 auto;
+      justify-content: flex-start;
+    }
+
+    .box {
+      width: 100%;
+      width: -moz-available;
+      width: -webkit-fill-available;
+      width: fill-available;
+      align-items: flex-start;
     }
 }
